test/libsolidity/syntaxTests/errors/error_param_type_shadowed_by_builtin_type_used_as_param_name.sol
contract C {
    error E(int bytes, bytes x);
}
// ----
// ParserError 2314: (29-34='bytes'): Expected ',' but got 'bytes'
